# Projet9_LITRevu

./: .gitignore  README.md  pyproject.toml
LITRevu/: settings.py  urls.py
static/css/: style.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_ticket_review_userfollows.py  0003_alter_review_options_alter_ticket_options_and_more.py
users/templates/users/: abonnements.html  base.html  flux.html  index.html  login.html  posts.html  register.html
users/templates/users/includes/: navbar.html
