[project]
name = "litrevu-projet9"
version = "0.1.0"
description = "Student project"
authors = [
    {name = "Nels-j"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
